@@ -447,6 +447,7 @@ IMPORTANT: please read docs/tech/tn0016.txt before modifying this file!
     wx/dynload.h
     wx/encconv.h
     wx/event.h
+    wx/eventfilter.h
     wx/evtloop.h
     wx/except.h
     wx/features.h
